# embedded-drivers

./: .deny.toml  .gitignore  .justfile  .typos.toml  Cargo.toml  README.md
crates/accel-adxl345/: Cargo.toml
crates/accel-adxl345/src/: async.rs  blocking.rs  lib.rs  register.rs
crates/adc-es7210/: Cargo.toml
crates/adc-es7210/src/: lib.rs
crates/dac-es8311/: Cargo.toml
crates/display-gc9a01/: Cargo.toml  README.md
crates/display-st7701s/: Cargo.toml  README.md
crates/display-st7701s/src/: async.rs  blocking.rs  command.rs  graphics.rs  lib.rs  model.rs
crates/es7210-driver/: Cargo.toml
crates/es8311-driver/: Cargo.toml  README.md
crates/gc9503-driver/: Cargo.toml  README.md
crates/generic-gps/: Cargo.toml
crates/generic-gps/src/: async.rs  lib.rs  nmea.rs
crates/gps-generic/: Cargo.toml  README.md
crates/gps-generic/src/: async.rs  blocking.rs  lib.rs
crates/gt911-driver/: Cargo.toml  README.md
crates/gt911-driver/src/: async.rs  blocking.rs  lib.rs  register.rs
crates/st7701s-driver/: Cargo.toml
crates/tca9554-driver/: Cargo.toml  README.md
crates/tca9554-driver/src/: action.rs  device.rs  lib.rs
crates/touch-gt911/: Cargo.toml
crates/touch-gt911/src/: async.rs  lib.rs  register.rs
src/: color.rs  lib.rs  mode.rs
