[package]
name = "ef-st7701s"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
ef-driver-common = { workspace = true, features = ["color"] }
embedded-hal = { workspace = true }
mipidsi = { workspace = true }

# Optional dependencies
defmt = { workspace = true, optional = true }

[features]
default = ["batch"]

# Enable support for `defmt`
defmt = ["dep:defmt"]
# Enable draw batching support
batch = ["mipidsi/batch"]
