[package]
name = "ef-st7701s"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
display-interface = { workspace = true }
ef-driver-common = { workspace = true, features = ["color"] }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }

# Optional dependencies
defmt = { workspace = true, optional = true }
embedded-graphics-core = { workspace = true, optional = true }

[features]
default = ["embedded-graphics"]

# Enable support for `defmt`
defmt = ["dep:defmt", "display-interface/defmt-03", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03"]
# Enable support for `embedded-graphics`
embedded-graphics = ["dep:embedded-graphics-core"]
