[package]
name = "es7210-driver"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
bitflags = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true, optional = true }

[features]
default = []

# Enable support for `embedded-hal-async`
async = ["dep:embedded-hal-async"]
# Enable support for `defmt`
defmt = ["dep:defmt"]
