[package]
name = "ef-gps-generic"
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
ef-driver-common = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
jiff = { workspace = true }

# Optional dependencies
defmt = { workspace = true, optional = true }

[features]
default = []

# Enable support for `defmt`
defmt = ["dep:defmt"]
